--- a/cart.html
+++ b/cart.html
@@ -112,6 +112,11 @@
             bottom: 0;
             width: 100%;
         }
+        body {
+    background-image: url(./Images/backimg.webp); /* Replace with your image path */
+    background-size: cover; /* Cover the entire background */
+    background-position: center; /* Center the background image */
+}
     </style>
 </head>
 <body>
