--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ button {
 button:hover {
     background-color: #45a049; /* Darker green on hover */
 }
+
 body {
-    background-image: url(./Images/DALL·E\ 2024-10-15\ 09.31.11\ -\ A\ vibrant\ background\ image\ for\ a\ food\ stall\ website\ titled\ \'TELUGU\ VANTILLU\'\,\ featuring\ classic\ South\ Indian\ foods\ like\ dosa\,\ vada\,\ mirchi\ bajji\,\ idli\ \(1\).webp); /* Replace with your image path */
+    background-image: url(./Images/backimg.webp); /* Replace with your image path */
     background-size: cover; /* Cover the entire background */
     background-position: center; /* Center the background image */
 }
-
 
     </style>
 
