--- a/payment.html
+++ b/payment.html
@@ -73,7 +73,12 @@
             border: 1px solid #b8daff;
             color: #31708f;
             display: none;
-        }
+        } 
+        body {
+    background-image: url(./Images/backimg.webp); /* Replace with your image path */
+    background-size: cover; /* Cover the entire background */
+    background-position: center; /* Center the background image */
+}
     </style>
 </head>
 <body>
